Made minor edits to the entitlements section of General Configuration.

--- a/doc-General_Configuration_Guide/Configuration.adoc
+++ b/doc-General_Configuration_Guide/Configuration.adoc
@@ -308,23 +308,23 @@ The update worker synchronizes the VMDB with the status of available CloudForms 
 Servers with the RHN Mirror role also act as a repository for other Appliances to pull CloudForms Management Engine packages updates.
 ==============
 
-====== Subscription Management for Virtual Environment
+====== Subscription Management for Virtual Environments
 
-Customers may license CloudForms for a limited set of providers. This ability is enabled by providing entitlement certificates which describe the features to be enabled. CloudForms can be shipped as a bundled product with other Red Hat products like OpenStack and OpenShift, providing advanced management capabilities to these products.
+Customers can license Red Hat CloudForms for a limited set of providers. This ability is enabled by providing entitlement certificates that describe the features to be enabled. Red Hat CloudForms can be shipped as a bundled product with other Red Hat products like Red Hat Enterprise Linux OpenStack Platform and Red Hat OpenShift, providing advanced management capabilities to these products.
 
-For more information on managing subscriptions for an IT infrastructure, see, Red Hat Subscription Management https://access.redhat.com/documentation/en-US/Red_Hat_Subscription_Management/1/html/Subscription_Concepts_and_Workflows/index.html[Subscription Concepts and Workflows] guide.
+For more information on managing subscriptions for an IT infrastructure, see the Red Hat Subscription Management https://access.redhat.com/documentation/en-US/Red_Hat_Subscription_Management/1/html/Subscription_Concepts_and_Workflows/index.html[Subscription Concepts and Workflows] guide.
 
-Entitlements provides the following enhancements to Red Hat:
+Entitlements provides the following enhancements:
 
 * Ability to enable or disable providers based upon a certificate.
 * Active subscription with Red Hat Cloud Data Network for delivery to Red Hat CloudForms.
-* Ability to remain in its own CloudForms channels.
+* Ability to remain in its own Red Hat CloudForms channel.
 * Ability to add providers even if no certificate is found.
 * In the presence of a certificate, providers are limited as per SKU, the certificate is supporting.
 * Ability to support the provider to SKU mapping.
 * Providers remain fully functional even after adding or removing SKU associated with certificates.
  
-For more information on migrating from older Red Hat Network Classic (hosted) to the updated subscription management, see the Red Hat Subscription Management, - https://access.redhat.com/documentation/en-US/Red_Hat_Subscription_Management/1/html-single/MigratingRHN/index.html[Migrating from RHN Classic] guide.
+For more information on migrating from older Red Hat Network Classic (hosted) to the updated subscription management, see the Red Hat Subscription Management https://access.redhat.com/documentation/en-US/Red_Hat_Subscription_Management/1/html-single/MigratingRHN/index.html[Migrating from RHN Classic] guide.
 
 ====== Editing Customer Information
 
