--- a/doc-Managing_Providers/topics/Authenticating_VMware_vCenter_Hosts.adoc
+++ b/doc-Managing_Providers/topics/Authenticating_VMware_vCenter_Hosts.adoc
@@ -18,7 +18,7 @@ For all hosts selected, the authentication status in the bottom right quadrant c
 
 == Using a Non-Administrator Account for Host Credentials
 
-After adding a VMware vCenter infrastructure provider, you must authenticate its hosts to enable full functionality. You may use administrator credentials, or you may create another user assigned to a role created for Red Hat CloudForms Management Engine. See the VMware documentation for instructions on how to create a role. You need to enable the following privileges:
+After adding a VMware vCenter infrastructure provider, you must authenticate its hosts to enable full functionality. You can use administrator credentials, or create another user assigned to a role created for Red Hat CloudForms Management Engine. See the VMware documentation for instructions on how to create a role. You need to enable the following privileges:
 
 From the Global group, check:
 
