Minor edits across the Configuration section of General Configuration.

--- a/doc-General_Configuration_Guide/Configuration.adoc
+++ b/doc-General_Configuration_Guide/Configuration.adoc
@@ -128,7 +128,7 @@ The +Name+ and +Single Value+ fields cannot be changed after the category has be
 * Check +Capture C & U Data+ by tag to be able to group capacity and utilization data by this tag category. To use this, be sure to assign this tag to all the resources that you want to group by.
 . Click +Add+.
 
-Result:: Repeat these steps for each category you need. After you have created the category, you can add values to it.
+Repeat these steps for each category you need. After you have created the category, you can add values to it.
 
 
 [IMPORTANT]
@@ -425,7 +425,7 @@ To Edit an Analysis Profile:
 . Make any changes.
 . Click +Save+.
 
-Result:: The changes are added to the analysis profile. The virtual machines or hosts must be re-analyzed to collect the new or modified information.
+The changes are added to the analysis profile. The virtual machines or hosts must be re-analyzed to collect the new or modified information.
 
 ===== Copying an Analysis Profile
 
@@ -562,11 +562,13 @@ These roles are enabled by default on all servers.
 
 ====== Server Roles
 
-[width="100%",cols="30%,70%",options="header",]
+[width="100%",cols="30%,70%a",options="header",]
 |=======================================================================
 |Server Role|Description
 |Automation Engine|Use this role if you want to use this CloudForms Management Engine server to process automation tasks.
-|Capacity and Utilization(3 Server Roles)|* The Capacity & Utilization Coordinator role checks to see if it is time to collect data, somewhat like a scheduler. If it is time, a job is queued for the Capacity and Utilization Data Collector. The coordinator role is required to complete Capacity and Utilization data collection. If more than one CloudForms Management Engine server in a specific zone has this role, only one will be active at a time. * The Capacity & Utilization Data Collector performs the actual collection of capacity and utilization data. This role has a dedicated worker, and there can be more than one CloudForms Management Engine server with this role in a zone. * The Capacity & Utilization Data Processor processes all of the data collected, allowing CloudForms Management Engine to create charts. This role has a dedicated worker, and there can be more than one CloudForms Management Engine server with this role in a zone.
+|Capacity and Utilization (three server roles)|* The Capacity & Utilization Coordinator role checks to see if it is time to collect data, somewhat like a scheduler. If it is time, a job is queued for the Capacity and Utilization Data Collector. The coordinator role is required to complete Capacity and Utilization data collection. If more than one CloudForms Management Engine server in a specific zone has this role, only one will be active at a time.
+* The Capacity & Utilization Data Collector performs the actual collection of capacity and utilization data. This role has a dedicated worker, and there can be more than one CloudForms Management Engine server with this role in a zone.
+* The Capacity & Utilization Data Processor processes all of the data collected, allowing CloudForms Management Engine to create charts. This role has a dedicated worker, and there can be more than one CloudForms Management Engine server with this role in a zone.
 |Database Operations|Use Database Operations to enable this CloudForms Management Engine server to run database backups or garbage collection.
 |Database Synchronization|Use Database Synchronization to enable this CloudForms Management Engine server's VMDB to replicate to a higher-level VMDB. This should only be enabled after creating settings for the Replication Worker.
 |Event Monitor|This role is enabled by default and provides the information shown in timelines. Event Monitor is responsible for the work between the CloudForms Management Engine server and your providers. It starts 2 workers for each provider. One worker, the monitor, is responsible for maintaining a connection to a provider, catching events, and putting them on the CloudForms Management Engine message queue for processing. The second worker, the handler, is a message queue worker responsible for delivering only those messages for a provider. You should have at least one of these in each zone.
@@ -951,7 +953,7 @@ image:2070.png[]
 . Click +Validate+ to confirm that the VMDB is accessible.
 . Click +Save+.
 
-Result:: The new settings take one to two minutes to take effect. Next, you need to enable the replication worker on the subordinate regions VMDB server.
+The new settings take one to two minutes to take effect. Next, you need to enable the replication worker on the subordinate regions VMDB server.
 
 ===== Database
 
@@ -980,7 +982,7 @@ To Change a Database Setting:
 . Click +Save+.
 . Click +OK+ to the warning that the server will restart immediately after you save the changes.
 
-Result:: During the restart, you are unable to access the server. When the restart is complete, the new database settings are in effect.
+During the restart, you are unable to access the server. When the restart is complete, the new database settings are in effect.
 
 ===== Customization and Logos
 
@@ -1880,7 +1882,7 @@ image:2099.png[]
 * If you choose +Network File System+, enter the +Depot Name+ and +URI+. 
 . Click +Submit+.
 
-Result: The database backup is run immediately. You can see the task by navigating to +Configure → Tasks+, then clicking on the +All Other Tasks+ tab.
+The database backup is run immediately. You can see the task by navigating to +Configure → Tasks+, then clicking on the +All Other Tasks+ tab.
 
 ===== Restoring a Database from Backup
 
@@ -1892,7 +1894,7 @@ To Restore a Database from Backup:
 . Press the number 6 to select Restore Database From Backup.
 . Press Y to confirm.
 
-Result: If directed by Red Hat, you can run database garbage collection to reclaim unused space in your VMDB. Generally, the database server does this automatically.
+If directed by Red Hat, you can run database garbage collection to reclaim unused space in your VMDB. Generally, the database server does this automatically.
 
 
 ==== Zone Diagnostics
@@ -2035,7 +2037,7 @@ Do not select more than one week unless instructed to do so by Red Hat Support.
 * Select an +End Date+.
 . Click +Submit+.
 
-Result:: After the gap collection has completed for this zone, repeat these same steps for the next zone. You can check for completion by going to the clusters page and checking for the capacity and utilization data for the time period specified.
+After the gap collection has completed for this zone, repeat these same steps for the next zone. You can check for completion by going to the clusters page and checking for the capacity and utilization data for the time period specified.
 
 
 ==== Server Diagnostics
@@ -2196,7 +2198,7 @@ To View the Audit Log:
 . Select the server that you want to view.
 . Click +Audit Log+.
 
-Result:: The server automatically retrieves the last 1000 lines of the log.
+The server automatically retrieves the last 1000 lines of the log.
 
 ====== Reloading the Audit Log
 
@@ -2229,7 +2231,7 @@ To View the Production Log
 . Select the server that you want to view.
 . Click +Production Log+.
 
-Result:: The CloudForms Management Engine server automatically retrieves the last 1000 lines of the log.
+The CloudForms Management Engine server automatically retrieves the last 1000 lines of the log.
 
 ====== Reloading the Production Log
 
