edited markup for buttons without proper markup throughout guide for BZ#1282791; fixed random typos as I came across them

--- a/doc-Managing_Infrastructure_and_Inventory/Hosts.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/Hosts.adoc
@@ -103,7 +103,7 @@ CloudForms Management Engine allows you to compare hosts and check operating sys
 . To remove a host from the comparison, click  image:images/1861.png[] btn:[(Remove this Host from the comparison)] at the bottom of the column.
 . To go to a compressed view, click  image:images/2024.png[] btn:[(Compressed View)].
   To return to an expanded view, click  image:images/2023.png[] btn:[(Expanded View)].
-. To limit the mode of the view, there are two buttons in the Taskbar.
+. To limit the mode of the view, there are two buttons in the taskbar.
 +
 * Click  image:images/2022.png[] btn:[(Details Mode)] to see all details for an attribute.
 * Click  image:images/2025.png[] btn:[(Exists Mode)] to limit the view to if an attribute exists compared to the base or not.
@@ -112,8 +112,6 @@ CloudForms Management Engine allows you to compare hosts and check operating sys
 
 . To change the base host that compare to the other hosts, click its label at the top of its column.
 . To go to the summary screen for a host, click its Virtual Thumbnail or icon.
-
-CloudForms Management Engine allows you to fine tune your comparison by selecting categories to compare.
 
 :leveloffset: 3
 include::topics/Host_Comparison_Sections.adoc[]
