--- a/doc-Managing_Infrastructure_and_Inventory/topics/Adding_a_Repository.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Adding_a_Repository.adoc
@@ -10,4 +10,4 @@ The VMDB requires a universal naming convention (UNC) network path to the reposi
 
 image::images/2240.png[]
 
-. Click [label]#Save#.
+. Click btn:[Save].
