--- a/doc-Managing_Infrastructure_and_Inventory/topics/Detecting_Drift_on_Instances_or_Images.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Detecting_Drift_on_Instances_or_Images.adoc
@@ -1,13 +1,13 @@
 = Detecting Drift on Instances or Images
 
 The configuration of an instance might change over time. [label]#Drift# is the comparison of an instance to itself at different points in time.
-The instance need analysis at least twice to collect this information.
+The instance needs to be analyzed at least twice to collect this information.
 Detecting drift provides you the following benefits:
 
-* See the difference between the last known state of a machine and its current state
+* See the difference between the last known state of a machine and its current state.
 * Review the configuration changes that happen to a particular instance between multiple points in time.
 * Review the association changes that happen to a particular instance between multiple points in time.
-* Review the classification changes that happen to an instance between 2 time checks.
+* Review the classification changes that happen to an instance between two time checks.
 * Capture the configuration drifts for a single instance across a time period.
 
 . Navigate to menu:Clouds[Instances].
