--- a/doc-Managing_Infrastructure_and_Inventory/topics/Editing_Hosts.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Editing_Hosts.adoc
@@ -27,5 +27,5 @@ For each type of credential used, the following information is required:
 * Use [label]#Verify Password# to confirm the password.
 
 
-. Test the credentials by using the [label]#Select Host to validate against# drop down and click [label]#Validate#.
-. Click [label]#Save#.
+. Test the credentials by using the [label]#Select Host to validate against# drop down and click btn:[Validate].
+. Click btn:[Save].
