--- a/doc-Managing_Infrastructure_and_Inventory/topics/Installing_VMware_VDDK_on_CloudForms_Management_Engine.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Installing_VMware_VDDK_on_CloudForms_Management_Engine.adoc
@@ -21,7 +21,7 @@ Alternatively, find the file by searching for it using the [label]#Search# on th
 # ./vmware-install.pl
 ----
 
-. Accept the defaults during the installation
+. Accept the defaults during the installation.
 +
 ----
 
