--- a/doc-Managing_Infrastructure_and_Inventory/topics/Refreshing_Multiple_Hosts.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Refreshing_Multiple_Hosts.adoc
@@ -5,7 +5,7 @@ Manually refresh a host for its properties and related infrastructure components
 . Navigate to menu:Infrastructure[Hosts].
 . Check the hosts to refresh.
 . Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2003.png[] btn:[(Refresh Relationships and Power States)].
-. Click [label]#OK#.
+. Click btn:[OK].
 
 When a host is refreshed and a new virtual machine is discovered on that host, CloudForms Management Engine checks to see if the virtual machine is already registered with another host.
 If this is the case, the host that the virtual machine is associated with switches to the new host.
