--- a/doc-Managing_Infrastructure_and_Inventory/topics/Removing_Repositories.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Removing_Repositories.adoc
@@ -5,7 +5,7 @@ If a repository is decommissioned or requires troubleshooting, it might require 
 . Navigate to menu:Infrastructure[Repositories].
 . Check the repositories to remove.
 . Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2157.png[] btn:[(Remove from the VMDB)].
-. Click [label]#OK#.
+. Click btn:[OK].
 
 The repositories are removed.
 Any virtual machines associated with the repositories remain, but are no longer associated with their respective repository.
