--- a/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Repositories.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Repositories.adoc
@@ -11,4 +11,4 @@ Before assigning tags, create them using the instructions in the _CloudForms Man
 
 image::images/2241.png[]
 
-. Select more tags or click [label]#Save# to save your changes.
+. Select more tags or click btn:[Save] to save your changes.
