--- a/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Security_Groups.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Security_Groups.adoc
@@ -8,4 +8,4 @@ Before assigning tags, create them using instructions in the _CloudForms Managem
 . Click  image:images/1941.png[] btn:[(Policy)], and then  image:images/2158.png[] btn:[(Edit Tags)].
 . Select a customer tag to assign from the dropdown menu.
 . Select a value to assign.
-. Click [label]#Save#.
+. Click btn:[Save].
