--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_use_Host_Comparison_Sections.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_use_Host_Comparison_Sections.adoc
@@ -3,7 +3,7 @@
 
 The following procedure describes how to use the host comparison sections.
 
-. On the left of a comparison screen, select what categories of properties to display.
+. On the left of a comparison screen, select the categories of properties to display.
 . Click the plus sign next to the sections name to expand it.
 . The following descriptions pertain to the [label]#Expanded View#				image:images/2023.png[].
   Either the value of a property or an icon representing the property displays depending on the properties type.
