--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_view_a_users_group_memberships.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_view_a_users_group_memberships.adoc
@@ -2,7 +2,7 @@
 = Viewing User Information for a Virtual Machine or Template
 
 CloudForms Management Engine's [label]#SmartState Analysis# feature returns user information.
-Drill into the user to get details on the users account, including group memberships.
+Drill into the user to get details on the user's account, including group memberships.
 
 . Navigate to menu:Infrastructure[Virtual Machines].
 . Click the accordion for the item to view user information.
