--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Drift_on_Virtual_Machines_or_Templates.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Drift_on_Virtual_Machines_or_Templates.adoc
@@ -2,13 +2,13 @@
 = Detecting Drift on Virtual Machines or Templates
 
 The configuration of a virtual machine might change over time. [label]#Drift# is the comparison of a virtual machine to itself at different points in time.
-The virtual machine need analysis at least twice to collect this information.
+The virtual machine needs analysis at least twice to collect this information.
 Detecting drift provides you the following benefits:
 
-* See the difference between the last known state of a machine and its current state
+* See the difference between the last known state of a machine and its current state.
 * Review the configuration changes that happen to a particular virtual machine between multiple points in time.
 * Review the host and datastore association changes that happen to a particular virtual machine between multiple points in time.
-* Review the classification changes that happen to a virtual machine between 2 time checks.
+* Review the classification changes that happen to a virtual machine between two time checks.
 * Capture the configuration drifts for a single virtual machine across a time period.
 
 . Navigate to menu:Infrastructure[Virtual Machines].
