--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_a_User_Information_for_an_Instance_or_Image.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_a_User_Information_for_an_Instance_or_Image.adoc
@@ -7,5 +7,5 @@ Explore the user to get details on the user's account, including group membershi
 . Navigate to menu:Clouds[Instances].
 . Click the accordion for the item to view user information.
 . Click on the item to view its [label]#Summary#.
-. From the [label]#Security# section of the [label]#Instance Summary#, click [label]#Users#.
+. From the [label]#Security# section of the [label]#Instance Summary#, click btn:[Users].
 . Click the user to view details.
