--- a/doc-Managing_Infrastructure_and_Inventory/Virtual_Machines.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/Virtual_Machines.adoc
@@ -169,7 +169,7 @@ image:images/2145.png[]
 |===
 
 The [label]#Virtual Machines# page has three accordions organizing your virtual machines and templates in different ways.
-All of these accordions share a set of common controls
+All of these accordions share a set of common controls:
 
 * Use [label]#VMs and Templates# to view your virtual machines and templates organized by Provider.
   In addition, you can see archived and orphaned items here.
@@ -274,7 +274,7 @@ Use the comparison feature to:
 
 . Navigate to menu:Infrastructure[Virtual Machines].
 . Click the accordion for the items to analyze.
-. Check the items to compare
+. Check the items to compare.
 . Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2148.png[] btn:[(Compare Selected)].
   The comparison displays in a compressed view with a limited set of properties listed.
 +
