--- a/doc-Managing_Infrastructure_and_Inventory/topics/Adding_a_single_Host.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Adding_a_single_Host.adoc
@@ -1,7 +1,7 @@
 = Adding a Single Host
 
 To analyze a host for more detailed information, add it to the VMDB first.
-If the host has not been found during [label]#Host Discovery# or [label]#Provider Refresh#, and the host's IP address is known, use the [label]#Add a New Host# button.
+If the host has not been found during [label]#Host Discovery# or [label]#Provider Refresh#, and the host's IP address is known, use the btn:[Add a New Host] button.
 
 . Navigate to menu:Infrastructure[Hosts].
 . Click  image:images/1847.png[] btn:[(Configuration)], then click  image:images/1848.png[] btn:[(Add a new Host)].
@@ -21,5 +21,5 @@ image::images/2214.png[]
 
 image::images/2215.png[]
 
-. Click [label]#Validate# to check the credentials.
-. Click [label]#Save#.
+. Click btn:[Validate] to check the credentials.
+. Click btn:[Save].
