--- a/doc-Managing_Infrastructure_and_Inventory/topics/Detecting_Drift_on_Hosts.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Detecting_Drift_on_Hosts.adoc
@@ -11,13 +11,13 @@ Detecting drift provides you the following benefits:
 
 . Navigate to menu:Infrastructure[Hosts].
 . Click on the host to view drift.
-. Click [label]#Relationships# in the Host Accordion.
-. Click [label]#Drift History#.
+. Click btn:[Relationships] in the Host Accordion.
+. Click btn:[Drift History].
 . Check the analyses to compare.
 . Click  image:images/1946.png[] btn:[(Drift)] at the top of the screen.
   The results display.
 . Check the [label]#Comparison# sections on the left to view in your comparison.
-. Click [label]#Apply#.
+. Click btn:[Apply].
 . Click the plus sign next to the sections name to expand it.
 +
 * An item displayed on red text shows a change from the base analysis.
@@ -30,7 +30,7 @@ Detecting drift provides you the following benefits:
 . Click  image:images/2023.png[] btn:[(Expanded View)] to see the expanded view.
   Click  image:images/2024.png[] btn:[(Compressed View)] to compress the information.
 . Click the minus sign next to the sections name to collapse it.
-. To limit the type of views, you have three buttons in the Taskbar.
+. To limit the type of views, you have three buttons in the Taskbar:
 +
 * Click  image:images/2178.png[] btn:[(All attributes)] to see all attributes of the sections you selected.
 * Click  image:images/2204.png[] btn:[(Attributes with different values)] to see only the attributes that are different across the drifts.
