--- a/doc-Managing_Infrastructure_and_Inventory/topics/Performing_SmartState_Analysis_on_Hosts.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Performing_SmartState_Analysis_on_Hosts.adoc
@@ -7,4 +7,4 @@ NOTE: [literal]+root+ or administrator credentials are required to get patch inf
 . Navigate to menu:Infrastructure[Hosts].
 . Check the hosts to analyze.
 . Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2147.png[]btn:[(Perform SmartState Analysis)].
-. Click [label]#OK#.
+. Click btn:[OK].
