--- a/doc-Managing_Infrastructure_and_Inventory/topics/Refreshing_Multiple_Repositories.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Refreshing_Multiple_Repositories.adoc
@@ -5,7 +5,7 @@ Refresh a repository for its properties and virtual machines.
 . Navigate to menu:Infrastructure[Repositories].
 . Check the repositories to refresh.
 . Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2003.png[] btn:[(Refresh Relationships and Power States)].
-. Click [label]#OK#.
+. Click btn:[OK].
 
 Identify a SmartProxy that has access to the repository to refresh it.
 For more information on [label]#Default Repository# SmartProxy parameter, see the _CloudForms Management Engine Settings and Operations Guide_.
