--- a/doc-Managing_Infrastructure_and_Inventory/topics/Removing_Clusters.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Removing_Clusters.adoc
@@ -5,7 +5,7 @@ If a cluster has been decommissioned or requires troubleshooting, it might requi
 . Navigate to menu:Infrastructure[Clusters].
 . Check the clusters to remove.
 . Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2157.png[] btn:[(Remove Clusters from the VMDB)].
-. Click [label]#OK#.
+. Click btn:[OK].
 
 The clusters are deleted.
 Any virtual machines or hosts associated with these clusters remain, but are no longer associated with them.
