--- a/doc-Managing_Infrastructure_and_Inventory/topics/Storage_Support_Notes_about_Analyzing_from_RHEVM_3.1.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Storage_Support_Notes_about_Analyzing_from_RHEVM_3.1.adoc
@@ -1,30 +1,29 @@
 [[_storage_support_notes_about_analyzing_from_rhevm_3.1]]
 = SmartState Analysis on Red Hat Enterprise Virtualization Manager 3.1 and Above - Storage Support Notes
 
-Note the following requirements when performing SmartState Analysis on Red Hat Enterprise Virtualization Manager 3.1 and above. 
+Note the following requirements when performing SmartState Analysis on Red Hat Enterprise Virtualization Manager 3.1 and above.
 
 * NFS
 
-** The CloudForms Management Engine appliance requires a mount to the NFS datastore. 
+** The CloudForms Management Engine appliance requires a mount to the NFS datastore.
 
 * iSCSI / FCP
 
-** For Red Hat Enterprise Virtualization 3.1 and 3.2, clusters must use full Red Hat Enterprise Linux hosts and not Red Hat Enterprise Virtualization Hypervisor hosts. You can use either type of host in Red Hat Enterprise Virtualization 3.3 and above. 
+** For Red Hat Enterprise Virtualization 3.1 and 3.2, clusters must use full Red Hat Enterprise Linux hosts and not Red Hat Enterprise Virtualization Hypervisor hosts. You can use either type of host in Red Hat Enterprise Virtualization 3.3 and above.
 
-** Each CloudForms Management Engine Appliance performing SmartState Analysis requires sharable, non-bootable DirectLUN access to each attached iSCSI/FCP storage domain. In order to perform smart analysis, the appliance must mount the data storage as a DirectLUN disk. 
+** Each CloudForms Management Engine Appliance performing SmartState Analysis requires sharable, non-bootable DirectLUN access to each attached iSCSI/FCP storage domain. In order to perform smart analysis, the appliance must mount the data storage as a DirectLUN disk.
 
-** A CloudForms Management Engine Appliance _must_ reside in each datacenter with the iSCSI / FCP storage type. 
+** A CloudForms Management Engine Appliance _must_ reside in each datacenter with the iSCSI / FCP storage type.
 
 * Other Notes
 
-** The [label]#Set Server Relationship# option enables the VM SmartState Analysis job to determine the datacenter where a CloudForms Management Engine Appliance is running and thus to identify what storage it has access to in a RHEV environment.
+** The [label]#Set Server Relationship# option enables the VM SmartState Analysis job to determine the datacenter where a CloudForms Management Engine Appliance is running and thus to identify what storage it has access to in a Red Hat Enterprise Virtualization environment.
 
 *** After setting up a CloudForms Management Engine Appliance and performing a refresh of the provider, find the CloudForms Management Engine Appliance in the [label]#Virtual Machine# accordion list and view its summary screen.
- 
-*** Click menu:Configuration[Edit Server Relationship]. 
 
-*** Select the server that relates to this instance of the CloudForms Management Engine Appliance. 
+*** Click menu:Configuration[Edit Server Relationship].
+
+*** Select the server that relates to this instance of the CloudForms Management Engine Appliance.
 
 
-IMPORTANT: If you attach a DirectLUN disk after configuring the CloudForms Management Engine database, access the Appliance in a terminal and run +pvscan+ to detect the DirectLUN disk. Alternatively, in CloudForms Management Engine 5.2.1 and above, you can restart the Appliance to detect the disk automatically. 
-
+IMPORTANT: If you attach a DirectLUN disk after configuring the CloudForms Management Engine database, access the Appliance in a terminal and run +pvscan+ to detect the DirectLUN disk. Alternatively, in CloudForms Management Engine 5.2.1 and above, you can restart the Appliance to detect the disk automatically.
