--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_set_ownership.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_set_ownership.adoc
@@ -8,7 +8,7 @@ This allows you an additional way to filter and can be used to enforce quotas.
 . Click the accordion for the items to change.
 . Check the items to set ownership.
 . Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2155.png[]btn:[(Set Ownership)] on the [label]#Virtual Machine Taskbar#.
-. From the [label]#Select an Owner# dropdown, select a user, and from the [label]#Select a Group# dropdown, select a group
+. From the [label]#Select an Owner# dropdown, select a user, and from the [label]#Select a Group# dropdown, select a group.
 +
 
 image::images/2156.png[]
