--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Capacity_and_Utilization_Charts_for_a_Cluster.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Capacity_and_Utilization_Charts_for_a_Cluster.adoc
@@ -3,7 +3,7 @@
 View capacity and utilization for a cluster.
 
 . Navigate to menu:Infrastructure[Clusters].
-. Click the Cluster to view Capacity and Utilization data.
+. Click the cluster to view Capacity and Utilization data.
 . Click  image:images/1994.png[] btn:[(Monitoring)], and then  image:images/1994.png[] btn:[(Utilization)] or from the accordion menu, click [label]#Properties#, then [label]#Capacity & Utilization#.
 +
 
@@ -16,7 +16,7 @@ image::images/2208.png[]
 
 image::images/2209.png[]
 
-The [label]#Capacity & Utilization# charts display.
+The [label]#Capacity & Utilization# charts display
 
 NOTE: Daily charts only include full days of data.
 If a day does not include all the 24 data points for a day, the data does not show for that day.
