--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Genealogy_of_an_Instance_or_Image.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Genealogy_of_an_Instance_or_Image.adoc
@@ -7,4 +7,4 @@ This also allows tagging of instances that share genealogy.
 . Navigate to menu:Clouds[Instances].
 . Click the accordion for the item to view genealogy.
 . Click on the item to view its [label]#Summary#.
-. From the [label]#Relationships# area in the [label]#Summary#, click [label]#Genealogy#.
+. From the [label]#Relationships# area in the [label]#Summary#, click btn:[Genealogy].
