Changed all references to the 'Settings and Configuration Guide' to the 'General Configuration Guide'

--- a/doc-Managing_Infrastructure_and_Inventory/topics/PXE_Servers.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/PXE_Servers.adoc
@@ -2,4 +2,4 @@
 
 PXE servers are used by CloudForms Management Engine to bootstrap virtual machines for the purpose of provisioning.
 They include images for different operating systems that can be customized using customization templates and are used in conjunction with IPMI Servers.
-See the _CloudForms Management Engine Lifecycle and Automation Guide_ for more information. 
+See the _CloudForms General Configuration Guide_ for more information.
