--- a/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Multiple_Hosts.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Multiple_Hosts.adoc
@@ -1,7 +1,7 @@
 = Tagging Multiple Hosts
 
 To categorize hosts together, apply tags to multiple hosts at the same time.
-Before assigning tags, create them using the instructions in the _CloudForms Management Engine Settings and Operations Guide_.
+Before assigning tags, create them using the instructions in the _CloudForms General Configuration Guide_.
 
 . Navigate to menu:Infrastructure[Hosts].
 . Check the hosts to tag.
