--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_view_event_logs.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_view_event_logs.adoc
@@ -2,7 +2,7 @@
 = Viewing Event Logs for a Virtual Machine or Template
 
 Using an [label]#Analysis Profile#, collect event log information from your virtual machines.
-See "Setting a Default Analysis Profile" in the _CloudForms Management Engine Settings and Operations Guide_.
+See "Setting a Default Analysis Profile" in the _CloudForms General Configuration Guide_.
 
 NOTE: This feature is only available for Windows.
 
