--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Event_Logs_for_an_Instance_or_Image.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Event_Logs_for_an_Instance_or_Image.adoc
@@ -1,7 +1,7 @@
 = Viewing Event Logs for an Instance or Image
 
 Using an [label]#Analysis Profile#, collect event log information from your instances.
-See the "Creating a Default Analysis Profile" section in the _CloudForms Management Engine Settings and Operations Guide_.
+See the "Creating a Default Analysis Profile" section in the _CloudForms General Configuration Guide_.
 
 NOTE: This feature is only available for Windows.
 
