--- a/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Repositories.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Repositories.adoc
@@ -1,7 +1,7 @@
 = Tagging Repositories
 
 Apply tags to categorize certain repositories together at the same time.
-Before assigning tags, create them using the instructions in the _CloudForms Management Engine Settings and Operations Guide_.
+Before assigning tags, create them using the instructions in the _CloudForms General Configuration Guide_.
 
 . Navigate to menu:Infrastructure[Repositories].
 . Check the repositories to tag.
