added note to Enhancements about RHEL7.2 not being supported until the first advisory for BZ#1283656

--- a/doc-Release_Notes/enhancements.adoc
+++ b/doc-Release_Notes/enhancements.adoc
@@ -102,3 +102,11 @@ widgets, dashboard controls and feedback. This enhancement supports:
 *Simplified Chinese language support*
 
 Red Hat CloudForms now includes Simplified Chinese as one of the supported languages for the CFME appliance.
+
+*Red Hat Enterprise Linux 7.1 support*
+
+Red Hat CloudForms is fully supported on Red Hat Enterprise Linux 7.1.
+
+Red Hat recommends delaying upgrades of Red Hat CloudForms 4.0 appliances to
+Red Hat Enterprise Linux 7.2 until the first Red Hat CloudForms 4.0 advisory
+ is released noting Red Hat Enterprise Linux 7.2 support.
