--- a/doc-Managing_Providers/topics/Discovering_Amazon_EC2_Cloud_Providers.adoc
+++ b/doc-Managing_Providers/topics/Discovering_Amazon_EC2_Cloud_Providers.adoc
@@ -1,11 +1,11 @@
-= Discovering Amazon Cloud Providers
+= Discovering Amazon EC2 Cloud Providers
 
 CloudForms Management Engine provides the ability to discover cloud providers associated with a particular set of Amazon EC2 account details. 
 
-.Procedure: To Discover an Amazon Cloud Provider
+.Procedure: To Discover an Amazon EC2 Cloud Provider
 . Navigate to menu:Clouds[Providers]. 
 . Click  image:images/1847.png[] btn:[(Configuration)], then click image:images/2119.png[] btn:[(Discover Cloud Providers)].
-. Select Amazon from the [label]#Discover Type# list.
+. Select Amazon EC2 from the [label]#Discover Type# list.
 . Enter your Amazon EC2 [label]#User ID# and [label]#Password#.
   Reenter your password in the [label]#Verify Password# field. 
 . Click [label]#Start#. 
