Add more topics for containers

--- a/doc-Containers/master.adoc
+++ b/doc-Containers/master.adoc
@@ -9,6 +9,8 @@ CloudForms Documentation Team <cloudforms-docs@redhat.com>
 
 :numbered:
 :leveloffset: 1
-include::Containers_Providers.adoc[]
+include::Managing_Containers.adoc[]
 
+:leveloffset: 1
+include::Containers_Providers.adoc[]
 
