--- a/doc-Containers/topics/Adding_an_Atomic_Enterprise_Provider.adoc
+++ b/doc-Containers/topics/Adding_an_Atomic_Enterprise_Provider.adoc
@@ -1,12 +1,12 @@
-= Adding an OpenShift Provider
+= Adding an Atomic Enterprise Platform Provider
 
-After initial installation and creation of a CloudForms Management Engine environment and configuration of an OpenShift cluster service account, add an OpenShift provider by following the procedure below.
+After initial installation and creation of a CloudForms Management Engine environment and configuration of an Atomic Enterprise Platform cluster service account, add an Atomic Enterprise Platform provider by following the procedure below.
 
-.Procedure: To Add an OpenShift Provider
+.Procedure: To Add an Atomic Enterprise Platform Provider
 . Navigate to menu:Containers[Providers]. 
 . Click  image:images/1847.png[] btn:[(Configuration)], then click  image:images/1848.png[] btn:[(Add a New Containers Provider)]. 
 . Enter a [label]#Name# for the provider. 
-. From the [label]#Type# drop down menu select [label]#OpenShift#. 
+. From the [label]#Type# drop down menu select [label]#Atomic Enterprise#. 
 . Enter the [label]#Hostname or IP address# of the provider. 
 +
 IMPORTANT: The [label]#Hostname# must use a unique fully qualified domain name. 
@@ -17,5 +17,5 @@ IMPORTANT: The [label]#Hostname# must use a unique fully qualified domain name.
   By default, the zone is set to [label]#default#. 
 . Under #Credentials#, enter the token in the [label]#Token# field. 
 * Click btn:[(Validate)] to confirm that the CloudForms Management Engine can connect to the OpenShift provider using the provided token. 
-. Click btn:[(Add)]. 
+. Click btn:[(Add)].
 
